* implemented new initialization logic